@@ -3,6 +3,7 @@
 
 extern	void	vector_test( void );
 extern	void	signal_test( void );
+extern	void	manage_test( void );
 
 
 #endif /*TESTS_H_*/
